--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -78,6 +78,10 @@ html, body {
     margin-bottom: $logo-margin;
   }
 
+  .logo-wrapper {
+    padding: 1.5rem 2rem 0;
+  }
+
   &>.search {
     position: relative;
 
